--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
+  width: 350px;
+  min-height: 400px;
+  border: 1px solid black;
+  list-style: none;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+}
+img{
+  width: 80%;
+  height: 60%;
+  margin-bottom: 20px;
+}
+.main{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+button{
+  width: 100px;
+  height: 40px;
+  background-color: orange;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: 200ms;
+}
+button:hover{
+  scale: 1.01;
+}
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+nav{
+  background-color: orange;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 50px;
+}
+p{
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  
+  
+  
+}
+a{
+  text-decoration: none;
+}
+.links{
+  display: flex;
+  gap: 100px;
+}
+.active{
+  color: yellow;
+  
+  text-decoration: underline;
+}
+footer{
+  background-color: black;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+.p{
   color: white;
-}
+ 
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.contact{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 0px 100px 0px;
+}
+.fa-spinner{
+  font-size: 88px;
 }
